--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starterkit",
+  "name": "spot-a-pot",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
-    "@prisma/client": "^5.15.1",
+    "@prisma/client": "^5.17.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.396.0",
+    "mapbox-gl": "^3.5.2",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -30,6 +31,7 @@
     "react-email": "^2.1.4",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
+    "react-map-gl": "^7.1.7",
     "react-textarea-autosize": "^8.5.3",
     "resend": "^3.3.0",
     "stripe": "^15.12.0",
@@ -39,7 +41,7 @@
   },
   "devDependencies": {
     "postcss": "^8",
-    "prisma": "^5.15.1",
+    "prisma": "^5.17.0",
     "tailwindcss": "^3.4.4"
   }
 }
